# AA1-TUIA-2025C2-Armas-FerreiraDaCamara-Soda

./: .gitignore  README.md  TP-clasificacion-AA1.ipynb  TP-clasificacion-AA1.py  TP-regresion-AA1.ipynb  australian_locations.csv  ejemplo_knn.ipynb  estructura_regresion.ipynb  estructura_regresion_copy.ipynb  holidays.ipynb  pyproject.toml  requirements.txt  todo.py  tratamiento_date.ipynb
Unidad_2_Regresión_Lineal/: Analisis descriptivo.pptx  Analisis exploratorio, valores atípicos y faltantes.pptx
Unidad_2_Regresión_Lineal/notebooks/: 3_Regularizacion_vehiculos_data.ipynb  Analisis exploratorio, valores atipicos y faltantes.ipynb  Fit predict.ipynb  GradienteDescendiente.ipynb  RegresionLinealSimple.ipynb  Regularizacion.ipynb  Regularizacion2.ipynb  Regularizacion3.ipynb  scalers.ipynb
