[project]
name = "aa1-tuia-2025c2-armas-ferreiradacamara-soda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopy>=2.4.1",
    "holidays>=0.81",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "nbstripout>=0.8.1",
    "notebook>=7.4.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
